== 2.6.12 ==
Release date: April 13, 2022
* Enhancement: Team Member - Added: Margin option for image
* Enhancement: Advanced Accordion - Added border radius option for title
* Enhancement: Twitter Tweet - Added support for URL dynamic tags
* Fixed: Info Box - Minor CSS glitch

== 2.6.11 ==
Release date: March 23, 2022
* Hotfix: Compatibility issues with Elementor 3.6.0
* Set the minimum required Elementor version to 3.2.0
* Enhancement: Twitter Tweet - Added dynamic tags support to Tweet URL field
* Enhancement: Info Box Carousel - Added grid layout option
* Enhancement: Info Box Carousel - Renamed widget to Info Grid & Carousel
* Fixed: Dual Heading - Issue with long text
* Fixed: Instagram Feed - Cache Timeout option
* Fixed: Icon List - Icon Type text field is not showing
* Fixed: Advanced Posts - Global typography settings for links was overriding post meta typography when post meta link is enabled

== 2.6.10 ==
Release date: March 3, 2022
* Enhancement: Team Member, Team Member Carousel - Added button style option for social links
* Enhancement: Team Member Carousel - Add links for Flickr, Tumblr, Github and Vimeo
* Enhancement: Flip Box - Added dynamic tags support for title, description and icon image options
* Enhancement: Instagram Feed - Added option again to the widget for adding custom access token
* Enhancement: Instagram Feed - Added pause on hover option in swiper slider widgets
* Enhancement: Info List - Added content padding option
* Enhancement: Info List - Added content separator option
* Enhancement: Info List - Added Text Shadow and Spacing options for title
* Enhancement: Info List - Added spacing option for button
* Enhancement: Icon List - Added icon size option for individual icons
* Enhancement: Link Effects - Added HTML tag option
* Enhancement: Display Conditions - Added support for adding multiple parameters
* Enhancement: Moved PowerPack extensions settings tab below Advanced section for easy accessibility