@@ -4,6 +4,7 @@ Release date: April 13, 2022
 * Enhancement: Advanced Accordion - Added border radius option for title
 * Enhancement: Twitter Tweet - Added support for URL dynamic tags
 * Fixed: Info Box - Minor CSS glitch
+* Fixed: Display Conditions - Current Date option was not working for single day
 
 == 2.6.11 ==
 Release date: March 23, 2022
